--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj
@@ -289,11 +289,13 @@
     <ClCompile Include="Tests\open_file_tests.cpp" />
     <ClCompile Include="Tests\string_file_loader.cpp" />
     <ClCompile Include="Tests\string_importer_tests.cpp" />
+    <ClCompile Include="Tests\string_item_tests.cpp" />
     <ClCompile Include="Tests\struct_importer_tests.cpp" />
     <ClCompile Include="Tests\truncate_file_tests.cpp" />
     <ClCompile Include="Tests\write_file_tests.cpp" />
     <ClCompile Include="Tests\wstring_file_loader.cpp" />
     <ClCompile Include="Tests\wstring_importer_tests.cpp" />
+    <ClCompile Include="Tests\wstring_item_tests.cpp" />
     <ClCompile Include="UnitTestApp.xaml.cpp">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </ClCompile>
